--- a/python sai/type cast.ipynb
+++ b/python sai/type cast.ipynb
@@ -80,6 +80,42 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1234.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "st=\"1234\"\n",
+    "print(float(st))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "123456.8\n"
+     ]
+    }
+   ],
+   "source": [
+    "st=\"123456.8\"\n",
+    "print(float(st))"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 30,
    "metadata": {},
    "outputs": [
@@ -99,6 +135,31 @@
     "print(float(flage))\n",
     "print(complex(flage))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "123.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "int=\"123\"\n",
+    "print(float(int))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
