--- a/python sai/ardhamatic.ipynb
+++ b/python sai/ardhamatic.ipynb
@@ -2,98 +2,78 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "100\n",
-      "(100+0j)\n",
-      "True\n",
-      "False\n",
-      "100\n",
-      "100\n"
+      "50\n"
      ]
     }
    ],
    "source": [
-    "a=100\n",
-    "b=float(a)\n",
-    "c=complex(a)\n",
-    "print(a)\n",
-    "print(c)\n",
-    "print(bool(a))\n",
-    "print(bool(0))\n",
-    "print(str(a))\n",
-    "print(str(a))"
+    "a=20\n",
+    "b=30\n",
+    "print(a+b)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "50\n",
-      "(50.5+0j)\n",
-      "50.5\n",
-      "True\n",
-      "50.5\n"
+      "30.5\n"
      ]
     }
    ],
    "source": [
-    "num=50.5\n",
-    "print(int(num))\n",
-    "print(complex(num))\n",
-    "print(str(num))\n",
-    "print(bool(num))\n",
-    "print(str(num))"
+    "a=10.5\n",
+    "b=20\n",
+    "print(a+b)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(1+3j)\n",
-      "(1+3j)\n",
-      "(1+3j)\n"
+      "(30+2j)\n"
      ]
     }
    ],
    "source": [
-    "v=1+3j\n",
-    "print(v)\n",
-    "print((str)(v))\n",
-    "print((str)(v))\n"
+    "a=(10+2j)\n",
+    "b=20\n",
+    "print(a+b)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1234.0\n"
+      "(5+4j)\n"
      ]
     }
    ],
    "source": [
-    "st=\"1234\"\n",
-    "print(float(st))"
+    "a=(0+2j)\n",
+    "b=5+2j\n",
+    "print(a+b)"
    ]
   },
   {
@@ -105,118 +85,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "123456.8\n"
+      "2\n"
      ]
     }
    ],
    "source": [
-    "st=\"123456.8\"\n",
-    "print(float(st))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 30,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1\n",
-      "1.0\n",
-      "(1+0j)\n"
-     ]
-    }
-   ],
-   "source": [
-    "flage=True\n",
-    "print(int(flage))\n",
-    "print(float(flage))\n",
-    "print(complex(flage))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "123.0\n"
-     ]
-    }
-   ],
-   "source": [
-    "int=\"123\"\n",
-    "print(float(int))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "True\n"
-     ]
-    }
-   ],
-   "source": [
-    "st=45\n",
-    "print(bool(st))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['r', 'a', 'm', 'u']\n",
-      "r\n",
-      "a\n"
-     ]
-    }
-   ],
-   "source": [
-    "st=\"ramu\"\n",
-    "print(list(st))\n",
-    "print(list(st)[0])\n",
-    "print(list(st)[1])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "('r', 'a', 'j', 'u')\n"
-     ]
-    }
-   ],
-   "source": [
-    "st=\"raju\"\n",
-    "print(tuple(st))"
+    "a=True\n",
+    "b=1\n",
+    "print(a+b)"
    ]
   },
   {
@@ -228,21 +104,171 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'a', 'u', 'j', 'r'}\n"
+      "udaysai\n"
      ]
     }
    ],
    "source": [
-    "st=\"rajuuuuuuuu\"\n",
-    "print(set(st))"
+    "st=\"uday\"\n",
+    "str=\"sai\"\n",
+    "print(st+str)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 3, 4, 6]\n"
+     ]
+    }
+   ],
+   "source": [
+    "l=[1,2,3]\n",
+    "l1=[4,6]\n",
+    "print(l+l1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "-10\n"
+     ]
+    }
+   ],
+   "source": [
+    "a=10\n",
+    "b=20\n",
+    "print(a-b)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5\n"
+     ]
+    }
+   ],
+   "source": [
+    "a=10\n",
+    "b=5\n",
+    "print(a-b)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(-10+2j)\n"
+     ]
+    }
+   ],
+   "source": [
+    "a=(10+2j)\n",
+    "b=20\n",
+    "print(a-b)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "18\n"
+     ]
+    }
+   ],
+   "source": [
+    "num1=6\n",
+    "num2=3\n",
+    "res=num1*num2\n",
+    "print(res)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10.6\n"
+     ]
+    }
+   ],
+   "source": [
+    "v=5.3\n",
+    "i=2\n",
+    "res=v*i\n",
+    "print(res)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(60+12j)\n"
+     ]
+    }
+   ],
+   "source": [
+    "l=10+2j\n",
+    "k=6\n",
+    "res=l*k\n",
+    "print(res)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "rajarajaraja\n"
+     ]
+    }
+   ],
+   "source": [
+    "st=\"raja\"\n",
+    "u=3\n",
+    "res=st*u\n",
+    "print(res)"
+   ]
   }
  ],
  "metadata": {
